k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mt-backend-service
  labels:
    app: mt-dashboard
    component: backend
spec:
  selector:
    app: mt-dashboard
    component: backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
