k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mt-frontend-service
  labels:
    app: mt-dashboard
    component: frontend
spec:
  selector:
    app: mt-dashboard
    component: frontend
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
